added once upon a time

--- a/example.html
+++ b/example.html
@@ -139,6 +139,11 @@
 <!-- 			</div>
 		</div> -->
 	</main>
+	<div id="once">
+		<svg width="628.57px" height="57.94px" fill-opacity="0" stroke="#FFF" stroke-width="1.5" id="myonce">
+			<image fill-opacity="0" stroke="#FFF" stroke-width="1.5" x="0" y="0" width="628.57px" height="57.94px" xlink:href="img/Untitled-4.svg">
+		</svg>
+	</div>
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
