--- a/example.html
+++ b/example.html
@@ -16,7 +16,8 @@
 
 </head>
 <body>
-	<div id="svg-container">
+	
+	<div class="svg-container">
 		<svg id="mycanvas">
 			<path class="mytitle" fill-opacity="0" stroke="#FFF" stroke-width="1.5" d="M42.4,47.9c-0.6,0.1-1,0.1-1.1,0.2H30.6c-1.4,0-2.1-0.3-2.1-0.9c0-0.3,0.3-1,1-2.2c0.7-1.1,1-2.4,1-3.8V23
 	c0-0.4-0.3-0.6-1.1-0.6c-1.8,0-3.8,0.9-6,2.5c-2.6,2-3.9,4.3-3.9,6.8v7.9c0,2.1,0.2,3.6,0.6,4.5c0.2,0.4,0.6,1.3,1.3,2.9
@@ -141,7 +142,7 @@
 	</main>
 	<div id="once">
 		<svg width="628.57px" height="57.94px" fill-opacity="0" stroke="#FFF" stroke-width="1.5" id="myonce">
-			<image fill-opacity="0" stroke="#FFF" stroke-width="1.5" x="0" y="0" width="628.57px" height="57.94px" xlink:href="img/Untitled-4.svg">
+			<image fill-opacity="0" stroke="#FFF" stroke-width="1.5" x="0" y="0" width="628.57px" height="57.94px" xlink:href="img/Untitled-4.svg"></image>
 		</svg>
 	</div>
 
