--- a/example.html
+++ b/example.html
@@ -128,6 +128,7 @@
 				c2.3,0,4.3-1.8,4.3-4.1c0-1-0.5-2-1.5-3l-2.7-2.2c0-0.7,0.7-1.4,2-1.9c1.1-0.5,2.1-0.7,3-0.7c2.4,0,4.5,0.9,6.4,2.8
 				c1.9,1.9,2.9,4,2.9,6.3C628.9,45.7,626.5,48.1,623,48.1z"/>
 		</svg>
+	</div>
 	<main>
 		<!-- <div class="container">
 			<div class="row"> -->
