change in opening animation

--- a/codework2.html
+++ b/codework2.html
@@ -386,30 +386,40 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <section id="pin" class="scroll-magic-section"> -->
         <!-- <h3 id="hlpin">Pinned Yo!</h3> -->
 
-        <div id="fades">
+        <div id="scene1">
             <div class="container">
                 <img id="treeone" src="img/treeline1.png" alt="treeline1">
                 <img id="treetwo" src="img/treeline2.png" alt="treeline2">
-                <img id="treethree" src="img/treeline2.png" alt="treeline1">
-                <img class="bread" src="img/breadcrumbs.png" alt="treeline2">
+                <img id="treethree" src="img/treeline2.png" alt="treeline3">
+                <img class="bread" src="img/breadcrumbs.png" alt="breadcrumbs">
 
                 <h3 id="onceupon">Once upon a time, two children lived with their father on the edge of a great forest.</h3>
                 <h3 id="onceupon2">They were very poor, and one day the children wandered into the forest to look for food.</h3>
                 <h3 id="onceupon3">So they would not lose their way, they left a trail of bread crumbs behind them…</h3>
 
-                <a href="#"><img class="bread" src="img/breadcrumbs_color.png" alt="treeline2"></a>
+                <a href="#"><img class="bread" src="img/breadcrumbs_color.png" alt="breadcrumbs color"></a>
             </div>
         </div>
 
-        <div id="wipe">
+        <div id="scene2">
             <div class="container">
-                <h3>Wipe Uno TranslateY</h3>
+              <img id="sun" src="img/sun.png" alt="sun">
+              <img id="moon" src="img/moon.png" alt="moon">
+
+              <img id="forest_scene2" src="img/treeline1.png" alt="forest">
+              <img id="hansel_walking" src="img/hansel walking.png" alt="hansel walking">
+              <img id="gretel_walking" src="img/gretel walking.png" alt="gretel walking">
+              <img id="breadcrumbs" src="img/breadcrumbs.png" alt="breadcrumbs">
+
+              <h3 id="onceupon4">They wandered until nightfall and then decided to turn and follow their path back home,</h3>
+              <h3 id="onceupon5">but when they looked back the way they came...</h3>
+              <h3 id="onceupon6">they found the bread crumbs had been eaten by birds!</h3>
             </div>
         </div>
 
         <div id="second-wipe">
             <div class="container">
-                <h3>Wipe Dos TranslateY</h3>
+              <h3 id="onceupon7">Have nothing else to do, they wandered through the forest all night and into the next morning.</h3>
             </div>
         </div>
 
