Up to scene three done

--- a/codework2.html
+++ b/codework2.html
@@ -434,6 +434,23 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             </div>
         </div>
 
+        <div id="scene4">
+            <div class="container">
+              <img id="forest_back" src="img/treeline2.png" alt="forest">
+              <img id="witch_intro" src="img/witch nice.png" alt="witch">
+              <img id="blackhouse" src="img/blackhouse.png" alt="candy house">
+              <img id="hansel_candy" src="img/hansel candy.png" alt="hansel">
+              <img id="gretel_candy" src="img/gretel candy.png" alt="gretel">
+              <!-- witch nice mouth.png -->
+
+              <h3 id="onceupon9">The starving children had begun to eat the candy house when suddenly an old woman appeared from inside.</h3>
+
+              <h3 id="onceupon10">Seeing how hungry they were she offered to let them in and make them dinner.</h3>
+
+              <a href="#"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+            </div>
+        </div>
+
 <!--         <div id="second-wipe">
             <div class="container">
               <h3 id="onceupon7">Have nothing else to do, they wandered through the forest all night and into the next morning.</h3>
