set up divs for all the story info

--- a/codework2.html
+++ b/codework2.html
@@ -404,9 +404,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
                 <a href="#" onclick="return hs.htmlExpand(this)"><img class="bread" src="img/breadcrumbs_color.png" alt="breadcrumbs color"></a>
                 <div class="highslide-maincontent">
-                  <h3>Lorem same</h3>
-                  Text about Hansel and Gretel
-              </div>
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
+                </div>
 
             </div>
         </div>
@@ -424,13 +424,13 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="sun" src="img/sun.png" alt="sun"></a>
               <div class="highslide-maincontent">
-                  <h3>different</h3>
-                  Text about Hansel and Gretel
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
               </div>
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="moon" src="img/moon.png" alt="moon"></a>
               <div class="highslide-maincontent">
-                  <h3>another</h3>
-                  Text about Hansel and Gretel
+                  <h3>Hey Stephani</h3>
+                  Type the same thing here
               </div>
 
             </div>
@@ -450,8 +450,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="house" src="img/house_color.png" alt="house"></a>
               <div class="highslide-maincontent">
-                  <h3>another</h3>
-                  Text about Hansel and Gretel
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
               </div>
             </div>
         </div>
@@ -471,8 +471,79 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
               <div class="highslide-maincontent">
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
+              </div>
+            </div>
+        </div>
+
+        <!-- scene 4, technically -->
+        <div id="scene5">
+            <div class="container">
+              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <div class="highslide-maincontent">
                   <h3>another</h3>
                   Text about Hansel and Gretel
+              </div>
+            </div>
+        </div>
+
+        <!-- scene 5 -->
+        <div id="scene6">
+            <div class="container">
+              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <div class="highslide-maincontent">
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
+              </div>
+            </div>
+        </div>
+
+        <!-- scene 6 -->
+        <div id="wipe">
+            <div class="container">
+                <img id="redbg" src="img/redbg.png" alt="redbg">
+                <img id="legs" src="img/legs.png" alt="legs">
+                <img id="oven-outline" src="img/oven-outline.png" alt="oven">
+                <img id="broom" src="img/broom.png" alt="broom">
+                <img id="basket" src="img/basket.png" alt="basket">
+                <img id="empty-cage"  src="img/empty-cage.png" alt="empty-cage">
+
+                <h3 id="witchdead1">When the witch opened the cage to grab the children Gretel slipped past her and shoved the evil witch into her own oven!</h3>
+
+                <a href="#" onclick="return hs.htmlExpand(this)"><img id="fire1" src="img/fire1.png" alt="fire1"></a>
+                <div class="highslide-maincontent">
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
+                </div>
+                <!-- <a href="#" onclick="return hs.htmlExpand(this)"><img id="legs" src="img/legs.png" alt="legs"></a>
+                <div class="highslide-maincontent">
+                  <h3>another</h3>
+                  Text about Hansel and Gretel
+                </div> -->
+
+                <img id="oven-outline" src="img/oven-outline.png" alt="oven">
+            </div>
+        </div>
+
+        <!-- scene 7 -->
+        <div id="scene7">
+            <div class="container">
+              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <div class="highslide-maincontent">
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
+              </div>
+            </div>
+        </div>
+
+        <!-- scene 8 -->
+        <div id="scene8">
+            <div class="container">
+              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <div class="highslide-maincontent">
+                  <h3>Hey Stephani</h3>
+                  Type a thing here
               </div>
             </div>
         </div>
