scene5 witch transition

--- a/codework2.html
+++ b/codework2.html
@@ -478,6 +478,23 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         </div>
 
         <!-- scene 4, technically -->
+
+        
+         <div id="scene5">
+            <div class="container">
+              <img id="witch_nice" src="img/witch nice mouth.png" alt="nice witch">
+              <img id="witch_evil" src="img/evil-witch.png" alt="evil witch">
+
+
+              <h3 id="onceupon11">The woman was only pretending to be kind</h3>
+              <h3 id="onceupon11-1">Really, she was a witch!</h3>
+              <h3 id="onceupon12">When the children stepped into her house she locked them up and told them she was going to eat them.</h3>
+
+ 
+        
+            </div>
+        </div>
+
         <div id="scene5">
             <div class="container">
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
