--- a/codework2.html
+++ b/codework2.html
@@ -529,22 +529,40 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <!-- scene 7 -->
         <div id="scene7">
             <div class="container">
-              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <img id="running_trees" src="img/treeline1.png" alt="forest">
+              <img id="running_trees1" src="img/treeline1.png" alt="forest">
+              <img id="running_house" src="img/blackhouse.png" alt="house">
+              <img id="running_hansel" src="img/hansel running.png" alt="running hansel">
+              <img id="running_gretel" src="img/gretel running.png" alt="running gretel">
+
+              <h3 id="backtoforest">As the witch burned Hansel and Gretel escaped the awful place and found themselves at the edge of the forest.</h3>
+
+             <!--  <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
               <div class="highslide-maincontent">
                   <h3>Hey Stephani</h3>
                   Type a thing here
-              </div>
+              </div> -->
             </div>
         </div>
 
         <!-- scene 8 -->
         <div id="scene8">
             <div class="container">
-              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <img id="endtree3" src="img/treeline2.png" alt="forest">
+              <img id="endtree4" src="img/treeline2.png" alt="forest">
+              <img id="hug" src="img/hug.png" alt="hug">
+              <img id="endtree1" src="img/treeline1.png" alt="forest">
+              <img id="endtree2" src="img/treeline1.png" alt="forest">
+
+              <h3 id="#happyend">Soon they found their home once more, and rushing forward they hugged their father and lived happily ever after.</h3>
+
+              <h2>The End.</h2>
+
+<!--               <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
               <div class="highslide-maincontent">
                   <h3>Hey Stephani</h3>
                   Type a thing here
-              </div>
+              </div> -->
             </div>
         </div>
 
