More spacing in content boxes

--- a/codework2.html
+++ b/codework2.html
@@ -464,7 +464,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="house" src="img/house_color.png" alt="house"></a>
               <div class="highslide-maincontent">
                   <h3>Hansel and Gretel - 1982 Film directed by Tim Burton</h3><br/>
-                  <p>Main Differences: Father is a toymaker. kids leave a trail of rocks and toy eats them. Beds come to life. The candy house melts. They become wealthy in the end.<p> 
+                  <p>Main Differences: Father is a toymaker. kids leave a trail of rocks and toy eats them. Beds come to life. The candy house melts. They become wealthy in the end.<p><br/>  
 
                   <p>Tim Burton’s adaptation of Hansel and Gretel features an all-Japanese cast. In this film, the father of the kids is presented as a toymaker. The evil stepmother takes the kids into the woods and distracts them with one of their father’s toys and runs off and abandons them. To be able to find the way back home, the kids left a trail of rocks; unfortunately, the duck toy they were dragging had been eating the rock trail along the way. The next morning after having slept in the woods, the toy transforms into a robot and leads them to a gingerbread house. The witch invites them to come in and offers them a cake and beds to sleep. The beds come to life and trap the kids, keeping them from running away. Before the Witch can shove Hansel into the oven, a battle begins between her and the children. The kids defeat the witch by tricking her into jumping inside the oven, and they are finally able to scape the house which completely melts. Once they’re out of the house, their toy reappears and takes them back home where they meet with their father who is happy to see them. As for the stepmother, she was kicked out by the kids’ father. The story ends with a rain of gold coins, providing them with the wealth they had been needing.</p>
               </div>
@@ -581,7 +581,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               <div class="highslide-maincontent">
                   <h3>Sesame Street Season 43 - Hansel and Gretel’s Playdate 2012</h3>
                   <br/>
-                  <p>Main Differences: The story is told as a way to teach a lesson to children about remembering. It does not involve a witch.</p> 
+                  <p>Main Differences: The story is told as a way to teach a lesson to children about remembering. It does not involve a witch.</p><br/> 
                   
                   <p>At the Subway Station, Hansel and Gretel are dropped off by their parents, but before they leave they tell the kids that they’ll be back to meet them at that same spot. To find the way back to that spot they decide to leave a trail of cookie crumbs instead of breadcrumbs. They call Big Bird to begin playing and soon they realize the Cookie Monster has eaten their cookie trail. Big Bird suggests they make a new trail with paper listing all directions. But then they notice the paper is blown away by the wind. Big Bird helps them go back to the station and waits while they make another trail. After several failed attempts, Big Birds offers them a different solution, which is to use their memory. And without a trail they got back to the Station.</p>
               </div>
