--- a/codework2.html
+++ b/codework2.html
@@ -524,8 +524,32 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         </div>
 
         <!-- scene 5 -->
+
+
         <div id="scene6">
             <div class="container">
+              <img id="caged-hansel" src="img/caged.png" alt="hansel caged">
+
+              <img id="pie" src="img/pie.png" alt="pie">
+              <img id="gretel-crying" src="img/crying.png" alt="gretel crying">
+              <img id="table" src="img/table.png" alt="table0">
+              <img id="redbg0" src="img/redbg.png" alt="redbg0">
+              <img id="fire0" src="img/fire1.png" alt="fire0">
+              <img id="fire0-1" src="img/fire1.png" alt="fire0-1">
+              <img id="oven-outline0" src="img/oven-outline.png" alt="oven0">
+              <img id="broom0" src="img/broom.png" alt="broom0">
+
+              <h3 id="onceupon13">The evil witch began preparing a pie to stick the children in, and they cried out in fear.</h3>
+              <h3 id="onceupon14">Then she opened the door to a giant oven.</h3>
+            </div>
+        </div>
+
+
+
+
+        <div id="scene6">
+            <div class="container">
+
               <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
               <div class="highslide-maincontent">
                   <h3>Hansel and Gretel - 2002 Directed by Gary J. Tunnicliffe </h3>
@@ -536,6 +560,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               </div>
             </div>
         </div>
+
+
+
 
         <!-- scene 6 -->
         <div id="wipe">
