removed extra fire.

--- a/codework2.html
+++ b/codework2.html
@@ -567,6 +567,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <!-- scene 6 -->
         <div id="wipe">
             <div class="container">
+               <img id="fire3" src="img/fire1.png" alt="fire0">
                 <img id="redbg" src="img/redbg.png" alt="redbg">
                 <img id="legs" src="img/legs.png" alt="legs">
                 <img id="oven-outline" src="img/oven-outline.png" alt="oven">
@@ -574,12 +575,12 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <img id="empty-cage"  src="img/empty-cage.png" alt="empty-cage">
                 <img id="fire1" src="img/fire1.png" alt="fire0">
                 <img id="fire2" src="img/fire1.png" alt="fire0">
-                <img id="fire3" src="img/fire1.png" alt="fire0">
+               
 
                 <h3 id="witchdead1">When the witch opened the cage to grab the children....</h3> 
                 <h3 id="witchdead2">Gretel slipped past her and shoved the evil witch into her own oven!</h3>
 
-                <a href="#" onclick="return hs.htmlExpand(this)"><img id="fire3" src="img/fire1.png" alt="fire3"></a>
+                <a href="#" onclick="return hs.htmlExpand(this)"><img id="broom" src="img/broom.png" alt="broom"></a>
                 <div class="highslide-maincontent">
                   <h3>Once Upon a Time - season 1 episode 9, 2012</h3><br/>
                   <p>Main Differences: Hansel and Gretel are never abandoned in the woods. They are captured by an Evil Queen and not a witch. The father is a prisoner of the Evil Queen.</p> 
