Little changes to fire and timing.
It looks awesome!

--- a/codework2.html
+++ b/codework2.html
@@ -536,21 +536,21 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               <img id="redbg0" src="img/redbg.png" alt="redbg0">
               <img id="fire0" src="img/fire1.png" alt="fire0">
               <img id="fire0-1" src="img/fire1.png" alt="fire0-1">
-              <img id="oven-outline0" src="img/oven-outline.png" alt="oven0">
+              <!-- <img id="oven-outline0" src="img/oven-outline.png" alt="oven0"> -->
               <img id="broom0" src="img/broom.png" alt="broom0">
 
               <h3 id="onceupon13">The evil witch began preparing a pie to stick the children in, and they cried out in fear.</h3>
               <h3 id="onceupon14">Then she opened the door to a giant oven.</h3>
-            </div>
+<!--             </div>
         </div>
 
 
 
 
         <div id="scene6">
-            <div class="container">
+            <div class="container"> -->
 
-              <a href="#" onclick="return hs.htmlExpand(this)"><img id="peppermint" src="img/peppermint.png" alt="house"></a>
+              <a href="#" onclick="return hs.htmlExpand(this)"><img id="oven-outline0" src="img/oven-outline.png" alt="oven0"></a>
               <div class="highslide-maincontent">
                   <h3>Hansel and Gretel - 2002 Directed by Gary J. Tunnicliffe </h3><br/>
                   <p>Main Differences: Hansel and Gretel are caught trying to find food at a troll’s house. They befriend a sandman and a fairy. The morning after sleeping in the candy house they realize the house is no longer made of candy. A raven warns them that the old lady is a witch. Hansel and Gretel get help from the sandman and the fairy to kill the witch.</p> 
